[tool.poetry]
name = "sat-review"
description = "anual taxes verification"
version = "1"
authors = ["Pedro Calleja <pecalleja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
openpyxl = "^3.0"
xlrd = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pre-commit = "^1.16"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | compose
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

